static/assets/style/style.css
@font-face {
	font-family: 'Cyntho Pro Regular';
	src: url('../font/CynthoPro-Regular.woff');
}

body {
	font-family: 'Cyntho Pro Regular';
	color: #fffcf7;
	cursor: default;
	-moz-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
	-o-user-select: none;
}

.home-center {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.top-bar {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-items: center;
	justify-content: flex-start;
	z-index: 999;
}

.top-bar > ul {
	display: inline-flex;
}

.top-bar-item {
	font-size: 1.75em;
	padding: 0px;
	margin: 0.2em 0.5em;
	word-spacing: -1px;
	display: inline;
	position: relative;
}

.top-bar-item a {
	letter-spacing: -1.5px;
}

.top-bar-item a:link,
.top-bar-item a:visited {
	text-decoration: none;
	color: #fffcf7;
}

.top-bar-item ul {
	display: none;
	list-style: none;
	position: absolute;
	font-size: 0.65em;
	padding: 0px;
	width: 10em;
	word-spacing: 2px;
	padding: 5px 0px 10px;
}

.top-bar-item ul li {
	padding: 0em 1px 0em;
}

.top-bar-item a:hover {
	color: #738290;
}

.top-bar-item:hover > ul {
	display: block;
	position: absolute;
}

.home-title {
	font-size: 3em;
}

.home-title a:hover {
	color: inherit;
}

.home-caption {
	font-size: 5em;
	text-align: center;
	margin: 0.5em 0em 0.3em;
}

.motd {
	text-align: center;
}

.motd h2 {
	text-transform: uppercase;
	letter-spacing: -1px;
	margin: 0px auto -3.5px;
}

.sep {
	width: 40em;
	margin: 0em auto 0.25em;
	display: block;
	border: none;
	color: black;
	height: 2px;
	/*background: white;*/
	background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#fff), to(#000));
	background: -moz-linear-gradient(right, black, white, black);
}

#wrapper {
	width: 849px;
	margin: 0 auto;
	min-height: 600px;
	/* background: url("/assets/image/banner.webp") top center no-repeat; */
	vertical-align: baseline;
}

#message {
	width: 50em;
	margin: 1em auto 5em;
	font-size: 1.5em;
}

#message a {
	color: white;
}

#message a:hover {
	color: #738290;
}

body {
	margin: 0;
}

.home-page {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	min-height: 100vh;
	position: relative;
	overflow: hidden;
}

.dim {
	background: rgba(0, 0, 0, 0.5);
}

video#bgvid {
	position: absolute;
	top: 50%;
	left: 50%;
	width: auto;
	height: auto;
	min-width: 100%;
	min-height: 100%;
	z-index: -100;
	-webkit-transform: translate(-50%, -50%);
	-moz-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}
.video-bg {
	overflow: hidden;
}
.info-boxes {
	display: flex;
	flex-direction: row;
	justify-content: center;
	flex-wrap: wrap;
}

.info-box {
	font-size: 2em;
	padding: 0.5em;
	border: 0.1em solid #fffcf7;
	text-align: center;
	min-width: 8em;
	margin: 0.5em 1.5em;
	border-radius: 0.2em;
	line-height: 115%;
	position: relative;
}

#first-box {
	border-bottom-left-radius: 0px;
}

.info-box h2 {
	margin: 0.25em;
	letter-spacing: 2px;
}

#next {
	cursor: progress;
	font-size: 0.8em;
	width: 4.5em;
	height: 1em;
	padding-bottom: 0.25em;
	color: rgba(0, 0, 0, 0.99);
	background-color: white;
	position: absolute;
	/*top: 7.9em;*/
	left: -0.12em;
	bottom: -1.33em;
}

#show {
	display: none;
	position: absolute;
	max-width: 960px;
	max-height: 768px;
	min-width: 400px;
	min-height: 300px;
	border: 5px solid white;
	border-radius: 2px;
	background-color: black;
	left: 0em;
	bottom: 1em;
	z-index: 9000;
}

#series {
	display: none;
	position: absolute;
	z-index: 9001;
	width: 25em;
	top: -2em;
	margin-left: 1em;
	letter-spacing: 0.03em;
}

#next:hover {
	color: rgba(0, 0, 0, 0.1);
	cursor: none;
}

#next:hover #show {
	cursor: default;
	display: flex;
}

#next:hover #series {
	display: flex;
	cursor: default;
	color: black;
	/*text-transform: capitalize;*/
	/*-webkit-text-stroke: 0.001px white;*/
	text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
	/*font-size: 0.95em;*/
}

.below-the-fold {
	color: #fffcf7;
	background-color: #738290;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	justify-content: space-around;
}

.below-the-fold > div:nth-child(2n + 1) {
	background-color: #fffcf7;
	color: #738290;
}

/*          #posts {
    display: inline-flex;
    flex-direction: column;
    align-items: center;
    background-color: #fffcf7;
    margin: 1em;

}

.post {
    font-size: 1em;

    padding: 0.5em;
    font-family: Arial, sans-serif;
}

.post_title {
    font-size: 2em;
    border-bottom: 0.1em solid #C2D8B9;
    margin-bottom: 0.5em;
}

.post a{
    text-decoration: none;
    color: #4f4f4f;
    border-bottom: 1px solid #A1B5D8;
    padding: 2px;
}
.post a:hover{
    border-bottom: 1px solid #A1B5D8;
    background: #E4F0D0;
}*/

.below-the-fold-item {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
	padding: 3em;
}

.below-the-fold-item h2 {
	border-style: outset;
	padding-left: 6px;
	border-top: 0px;
	border-right: 0px;
	border-radius: 2px;
	border-left-width: 5px;
	font-size: 2em;
}

.below-the-fold-item h2:nth-child(2n + 1) {
	border-style: inset;
}

.below-the-fold-item > img {
	/*max-width:100%;*/
	/*height: 50em;*/
	max-height: 25em;
	height: auto;
	max-width: 15em;
	width: auto;
}
.about-text {
	padding: 3em;
	max-width: 33em;
}

.about-text a {
	text-decoration: none;
	color: inherit;
	border-bottom: 0.12em solid #adadad;
	padding: 2px 2px 0px;
}

.about-text a:hover {
	background-color: #cccccc;
	border-radius: 2.5px;
}

.about-text li {
	line-height: 1.2em;
}

.history {
	position: relative;
}

.history h3 {
	text-transform: uppercase;
	border-style: solid;
	border-top: 0px;
	border-left: 0px;
	border-right-width: 15px;
	border-color: #ffbf3e;
	border-radius: 1px;
	margin-bottom: 0px;
	padding-bottom: 0px;
	text-align: right;
	padding-right: 0.2em;
}

#events h3 {
	padding-bottom: 0px;
	margin-bottom: 0px;
	text-align: center;
	text-transform: uppercase;
}

.about-text .sub {
	margin-top: 0.5em;
}

.spoilerbutton {
	position: absolute;
	top: -0.65em;
	border-width: 0px;
	border-radius: 1px;
	color: #424242;
	padding: 6px 10px;
	font-size: 11px;
	/*font-weight: 400;*/
	background: linear-gradient(#fff, #e5e5e5), #fff;
	line-height: 1;
	box-shadow: none;
	-webkit-appearance: none;
	text-decoration: none;
	text-align: center;
	transition: background-color 0.3s ease-out;
}

.spoilerbutton:hover {
	background: linear-gradient(#fff, #d5d5d5), #fff;
}

.spoiler {
	overflow: hidden;
	background: #fffcf7;
}

.spoiler > div {
	-webkit-transition: all 0.5s ease;
	-moz-transition: margin 0.5s ease;
	-o-transition: all 0.5s ease;
	transition: margin 0.5s ease;
}

.spoilerbutton[value='Show'] + .spoiler > div {
	margin-top: -3000%;
}

.spoilerbutton[value='Hide'] + .spoiler {
	padding: 5px;
}

